# ennead

./: .editorconfig  flake.nix
cli/: Cargo.toml  listenbrainz-watcher.sh
cli/src/: main.rs
firmware/: Cargo.toml
firmware/src/: display.rs  error.rs  main.rs  usb.rs
protocol/: Cargo.toml
protocol/src/: embedded.rs  image.rs  lib.rs  std.rs
