[package]
name = "ἐννεάς-cli"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow.version = "1.0.93"
anyhow.default-features = false
anyhow.features = ["std"]

dither.git = "https://github.com/Nemo157/dither"
dither.default-features = false

# renamed to workaround https://github.com/rust-lang/rust/issues/134250
ennead-protocol.package = "ἐννεάς-protocol"
ennead-protocol.path = "../protocol"
ennead-protocol.version = "0.1.0"
ennead-protocol.features = ["std"]

image.version = "0.25.5"
image.default-features = false
image.features = ["png", "jpeg"]

indicatif.version = "0.17.9"

nix.version = "0.29.0"
nix.default-features = false

udev.version = "0.9.1"
udev.default-features = false

zerocopy.version = "0.8.11"
zerocopy.default-features = false
zerocopy.features = ["derive"]
