[package]
name = "ἐννεάς-firmware"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m-rt.version = "0.7.5"
cortex-m-rt.default-features = false

embedded-graphics.version = "0.8.0"
embedded-graphics.default-features = false

embedded-hal-bus.version = "0.2.0"
embedded-hal-bus.default-features = false

embedded-hal.version = "1.0.0"
embedded-hal.default-features = false

# renamed to workaround https://github.com/rust-lang/rust/issues/134250
ennead-protocol.package = "ἐννεάς-protocol"
ennead-protocol.version = "0.1.0"
ennead-protocol.path = "../protocol"
ennead-protocol.features = ["embedded"]

epd-waveshare.version = "0.6.0"
epd-waveshare.default-features = false
epd-waveshare.features = ["graphics", "linux-dev", "epd2in13_v3"]

fugit.version = "0.3.7"
fugit.default-features = false

heapless.version = "0.8.0"
heapless.default-features = false

log.version = "0.4.22"
log.default-features = false

panic-halt.version = "1.0.0"
panic-halt.default-features = false

usb-device.version = "0.3.1"
usb-device.default-features = false

usbd-hid.version = "0.7.0"
usbd-hid.default-features = false

usbd-serial.version = "0.2.1"
usbd-serial.default-features = false

waveshare-rp2040-epaper-73.git = "https://github.com/Nemo157/rp-hal-boards"
waveshare-rp2040-epaper-73.branch = "waveshare-epaper-73"
waveshare-rp2040-epaper-73.default-features = false
waveshare-rp2040-epaper-73.features = ["boot2", "rt", "critical-section-impl", "rom-func-cache"]

zerocopy.version = "0.8.11"
zerocopy.default-features = false
zerocopy.features = ["derive"]

# Not actually used since we use `embedded_hal_bus::ExclusiveDevice`, but
# necessary to get it to compile for now.
# https://github.com/rust-embedded/embedded-hal/issues/598
portable-atomic = { version = "1.3", default-features = false, features = ["unsafe-assume-single-core"] }

# Because the graphics buffer takes almost the whole RAM the firmware _must_ be
# optimized
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 0
