[package]
name = "ἐννεάς-protocol"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-graphics-core.version = "0.4.0"
embedded-graphics-core.default-features = false
embedded-graphics-core.optional = true

epd-waveshare.version = "0.6.0"
epd-waveshare.default-features = false
epd-waveshare.features = ["graphics", "linux-dev", "epd2in13_v3"]
epd-waveshare.optional = true

image.version = "0.25.5"
image.default-features = false
image.optional = true

strum.version = "0.26.3"
strum.default-features = false
strum.features = ["derive"]

zerocopy.version = "0.8.11"
zerocopy.default-features = false
zerocopy.features = ["derive"]

[features]
std = ["dep:image"]
embedded = ["dep:epd-waveshare", "dep:embedded-graphics-core"]
